--- a/web/src/components/VariablesView/VariablesView.module.css
+++ b/web/src/components/VariablesView/VariablesView.module.css
@@ -142,6 +142,7 @@
 }
 
 .empty {
+	padding: 1rem;
 	display: flex;
 	min-height: 100%;
 	min-width: 100%;
